--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Bootstrap 101 Template</title>
+	<title>Mama fest</title>
 
 	<!-- Bootstrap -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -103,10 +103,21 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+  	</div>
 
+    <div class="what">
+      <div class="what_title">Что такое MAMA FEST?</div>
+      <p class="what_text">
+        MAMA FEST - один из самых популярных и масштабных проектов города для мам, в рамках <br>
+которого мы проводим семейные мероприятия различного масштаба.<br>
+Фестиваль MAMA FEST трижды с успехом прошел в Алматы и впервые состоялся в Астане в<br>
+июне 2016 г.<br>
+      </p>
+    </div>   
 
+    <div class="what_title">Новости</div>
 
-  	</div>    
+    <a class="get_more" href="#">Узнать о MAMA FEST больше →</a> 
 
   	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
